# agent-core-framework

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
agent_core/: __init__.py
agent_core/agents/: __init__.py  base.py
agent_core/configuration/: __init__.py  loader.py  schemas.py  validation.py
agent_core/contracts/: __init__.py  agent.py  errors.py  execution_context.py  flow.py  observability.py  service.py  tool.py
agent_core/governance/: __init__.py  audit.py  budget.py  permissions.py  policy.py
agent_core/observability/: __init__.py  interface.py  logging.py  metrics.py  noop.py  tracing.py
agent_core/orchestration/: __init__.py  base.py  flow_engine.py  langgraph_engine.py  scheduler.py  state.py  yaml_loader.py
agent_core/runtime/: __init__.py  action_execution.py  error_classification.py  execution_context.py  lifecycle.py  retry_policy.py  routing.py  runtime.py
agent_core/services/: __init__.py  base.py
agent_core/tools/: __init__.py  base.py
agent_core/utils/: __init__.py  ids.py
config/: agent-core.yaml
docs/: README.md  architecture.md  configuration.md  contracts.md  creating-agents.md  creating-services.md  creating-tools.md  docker.md  flows.md  installation.md  overview.md  runtime-api.md
examples/: README.md  minimal_example.py
examples/flows/: simple_flow.yaml
tests/: __init__.py
tests/contracts/: __init__.py  conftest.py  helpers.py  test_agent_contract.py  test_errors_contract.py  test_execution_context.py  test_flow_contract.py  test_tool_contract.py  (+3 more)
(+39 files in other folders)
